# brec

./: .gitignore  .octocov.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODOs.md  cargo_update.sh  coverage.sh  docs.sh  e2e-gen.sh  e2e.sh  index.html  lint.sh  pr.md  sitemap.xml  stress.sh  test.sh
brec/: Cargo.toml  README.md  TODOs.md  coverage_wasm.sh  test.sh
brec/macros/include/: Cargo.toml
brec/macros/include/src/: lib.rs
brec/macros/packet/: Cargo.toml  test.sh
brec/macros/packet/src/: error.rs  lib.rs
brec/src/: error.rs  lib.rs  prelude.rs  tests.rs
brec/src/block/: mod.rs  props.rs  read.rs  write.rs
brec/src/crypt/: consts.rs  record.rs
brec/src/crypt/options/: decrypt.rs  encrypt.rs  policy.rs
brec/src/integrations/: mod.rs
brec/src/integrations/java/: mod.rs
brec/src/napi/: error.rs  mod.rs
brec/src/napi/packet/: macros.rs  mod.rs
brec/src/packet/: mod.rs  read.rs  reader.rs  referred.rs  rules.rs  write.rs
brec/src/packet/header/: mod.rs  read.rs  write.rs
brec/src/payload/: header.rs  mod.rs  write.rs
brec/src/payload/defaults/: string.rs  vec_u8.rs
brec/src/payload/header/: mod.rs  read.rs  sreader.rs
brec/src/payload/props/: mod.rs
brec/src/storage/: error.rs  file.rs  iters.rs  locator.rs  mod.rs
brec/src/storage/observer/: mod.rs
brec/src/storage/reader/: iters.rs  mod.rs
brec/src/storage/slot/: anchored.rs  header.rs  mod.rs  read.rs  write.rs
brec/src/storage/writer/: locker.rs  mod.rs
brec/src/traits/: mod.rs  props.rs  write.rs
brec/src/traits/props/: byte_block.rs  mod.rs
brec/src/traits/read/: mod.rs  reader.rs  status.rs
brec/src/traits/write/: mod.rs  slices.rs
brec/src/wasm/: error.rs  mod.rs
brec/src/wasm/packet/: macros.rs  mod.rs
brec_common/: Cargo.toml  README.md
brec_common/src/: lib.rs
brec_macros/: Cargo.toml  README.md
brec_macros/src/: error.rs  lib.rs
brec_macros/src/codegen/: mod.rs  napi.rs  wasm.rs
brec_macros/src/codegen/base/: block.rs  mod.rs  payload.rs
brec_macros/src/codegen/props/: block.rs  mod.rs  payload.rs
brec_macros/src/codegen/read/: block.rs
brec_macros/src/codegen/write/: block.rs  mod.rs  payload.rs
brec_macros/src/collector/: mod.rs  packet.rs
brec_macros/src/collector/blocks/: enums.rs  mod.rs  napi.rs  props.rs  read.rs  wasm.rs
brec_macros/src/collector/payloads/: enums.rs  mod.rs  napi.rs  props.rs  read.rs  wasm.rs  write.rs
brec_macros/src/entities/block/: mod.rs
brec_macros/src/entities/derives/: mod.rs
brec_macros/src/entities/payload/: mod.rs
brec_macros/src/entities/vis/: mod.rs
brec_macros/src/generate/: config.rs  mod.rs  parser.rs
brec_macros/src/integrations/codegen/: java.rs  mod.rs  napi.rs  wasm.rs
brec_macros/src/parser/: payload.rs
brec_macros/src/parsing/ty/: mod.rs
brec_macros/src/tests/project/: mod.rs
brec_macros/src/tests/tcrate/: cargo.toml.test  mod.rs
brec_marcos/: Cargo.toml
brec_marcos/src/: error.rs  lib.rs
brec_marcos/src/codegen/props/: block.rs  mod.rs  payload.rs
brec_marcos/src/collector/: mod.rs
brec_marcos/src/parser/: payload.rs
brec_marcos/src/tests/: mod.rs
e2e-gen/csharp/protocol/: Cargo.toml
e2e-generator/java/server/: Cargo.toml
e2e-generator/node/: .dockerignore  .gitignore  Cargo.toml  local.deps.cargo.toml  test.sh
e2e-generator/node/client/: Dockerfile  tsconfig.json
e2e/csharp/: .gitignore  Cargo.toml  coverage.sh  test.sh
e2e/csharp/bindings/: Cargo.toml
e2e/csharp/client/: Client.csproj  ClientBindings.cs  Dockerfile  Program.cs
e2e/csharp/server/: Cargo.toml
e2e/node/: .dockerignore  .gitignore  Cargo.toml  coverage.sh  stress.sh  test.sh
e2e/node/bindings/: Cargo.toml
e2e/node/client/: Dockerfile  package.json
e2e/node/protocol/: Cargo.toml
e2e/wasm/: .dockerignore  .gitignore  Cargo.toml  test.sh
e2e/wasm/protocol/: Cargo.toml
e2e/wasm_browser/: .dockerignore  Cargo.toml  docker-compose.yml  test.sh
e2e/wasm_browser/bindings/: Cargo.toml
e2e/wasm_browser/client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
e2e/wasm_browser/protocol/: Cargo.toml
e2e/wasm_browser/server/: Cargo.toml
examples/crypt/: Cargo.toml
examples/crypt/src/: main.rs
examples/ctx/: Cargo.toml
examples/ctx/src/: main.rs
examples/wasmjs/: Cargo.toml
generator/macros/: Cargo.toml  README.md  stress.sh
generator/macros/src/: lib.rs
generator/scheme/: Cargo.toml  README.md
generator/scheme/src/: lib.rs
integration/tools/: Cargo.toml
lib/consts/: Cargo.toml  README.md
lib/consts/src/: lib.rs
lib/core/: Cargo.toml  README.md  TODOs.md  coverage_wasm.sh  test.sh
lib/core/src/: error.rs  lib.rs  prelude.rs  tests.rs
measurements/runner/: Cargo.toml  measurements_heavy.sh  measurements_light.sh  measurements_middle.sh  measurements_normal.sh  test.sh
measurements/runner/src/: content.rs  main.rs  metrics.rs  protocol.rs  report.rs  test.rs
tests/: Cargo.toml  coverage.sh  stress.sh  test.sh
tests/custom_scheme_no_payload/: Cargo.toml
tests/custom_scheme_no_payload/src/: main.rs
tests/custom_scheme_payload/: Cargo.toml
tests/custom_scheme_payload/src/: main.rs
tests/enums/: Cargo.toml
tests/enums/src/: main.rs
tests/locked_storage/: Cargo.toml
tests/locked_storage/src/: main.rs  storage.rs  test.rs
tests/measurements/: Cargo.toml
tests/measurements/src/: content.rs  main.rs  protocol.rs  report.rs  test.rs
tests/observer/: Cargo.toml  stress.sh
tests/observer/src/: test.rs
tests/stress_blocks/: Cargo.toml  stress.sh
tests/stress_blocks/src/: block_comb.rs  block_f32.rs  block_i128.rs  block_i16.rs  block_i64.rs  block_i8.rs  block_u16.rs  block_u32.rs  block_u64.rs  main.rs  test.rs
tests/stress_packets/: Cargo.toml
tests/stress_packets/src/: test.rs
tests/stress_payloads/: Cargo.toml
tests/stress_payloads/src/: a.rs  c.rs  main.rs  test.rs
tests/stress_payloads_crypt/: Cargo.toml  stress.sh
tests/stress_payloads_crypt/src/: c.rs  d.rs  main.rs  test.rs
tests/stress_resilient/: Cargo.toml  stress.sh
tests/stress_resilient/src/: test.rs
(+860 files in other folders)
