[package]
name        = "brec"
version     = "0.2.0"
edition     = "2024"
authors     = ["d.astafyev@outlook.com"]
description = "A flexible binary format for storing and streaming structured data as packets with CRC protection and recoverability from corruption. Built for extensibility and robustness."
license     = "Apache-2.0"
repository  = "https://github.com/icsmw/brec.git"
homepage    = "https://github.com/icsmw/brec"
readme      = "README.md"

keywords = ["binary", "packet", "storage", "logging", "streaming"]

categories = [
    "encoding",
    "data-structures",
    "filesystem",
    "development-tools",
    "parser-implementations",
]

[features]
build = []
bincode = ["dep:bincode"]
locked_storage = ["fs4", "brec_macros/locked_storage"]
observer = [
    "dep:notify",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-stream",
    "dep:tracing",
    "brec_macros/observer",
]
crypt = [
    "dep:bincode",
    "dep:serde",
    "dep:chacha20poly1305",
    "dep:rsa",
    "dep:sha2",
    "dep:secrecy",
    "dep:zeroize",
    "dep:x509-parser",
    "dep:pem",
]


[dependencies]
thiserror.workspace = true
crc32fast.workspace = true
enum_ids.workspace  = true
brec_macros         = { workspace = true, features = [], optional = false }
bincode             = { workspace = true, optional = true }
serde               = { workspace = true, optional = true }
notify              = { workspace = true, optional = true }
tracing             = { workspace = true, optional = true }
fs4                 = { workspace = true, optional = true }
tokio               = { workspace = true, features = ["full"], optional = true }
tokio-util          = { workspace = true, optional = true }
tokio-stream        = { workspace = true, optional = true }
chacha20poly1305    = { workspace = true, optional = true }
rsa                 = { workspace = true, optional = true }
sha2                = { workspace = true, optional = true }
secrecy             = { workspace = true, optional = true }
zeroize             = { workspace = true, optional = true }
x509-parser         = { workspace = true, optional = true }
pem                 = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
