[package]
name = "brec_marcos"
version = "0.1.0"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = "Code generator for brec. Implements the block and payload macros."
license = "Apache-2.0"
resolver = "2"
publish = false

[lib]
proc-macro = true

[features]
generate_macro_test = []

[dependencies]
thiserror.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
enum_ids.workspace = true
crc32fast.workspace = true
lazy_static.workspace = true
serde = { workspace = true , features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
quote.workspace = true
proc-macro2.workspace = true
uuid = { workspace = true , features = ["fast-rng", "macro-diagnostics", "v4"] }
