[workspace]
resolver = "2"
members = [
    "stress_blocks",
    "stress_payloads",
    "stress_payloads_crypt",
    "stress_packets",
    "locked_storage",
    "observer",
]

[workspace.dependencies]
brec        = { path = "../brec" }
serde       = "1.0"
serde_json  = "1.0.140"
proptest    = "1.4"
num-format  = "0.4"
serial_test = "3.2.0"
tokio       = "1.49"
tokio-util  = "0.7"
sysinfo     = { version = "0.37", default-features = false, features = ["system"] }
