[workspace]
resolver = "2"
members = [
    "stress_blocks",
    "stress_payloads",
    "stress_payloads_crypt",
    "stress_packets",
    "stress_resilient",
    "locked_storage",
    "observer",
]

[workspace.dependencies]
brec        = { path = "../lib/core" }
serde       = "1.0"
serde_json  = "1.0"
proptest    = "1.4"
num-format  = "0.4"
serial_test = "3.2"
tokio       = "1.51"
tokio-util  = "0.7"
sysinfo     = { version = "0.38", default-features = false, features = ["system"] }
