[workspace]
resolver = "2"
members  = ["protocol", "server"]

[workspace.dependencies]
brec              = { path = "../../lib/core" }
serde             = "1.0"
serde_json        = "1.0"
thiserror         = "2.0"
tokio             = "1.50"
tokio-tungstenite = "0.29"
futures-util      = "0.3"
napi              = { version = "3.8", features = ["napi6"] }
napi-derive       = "3.5"
napi-build        = "2.3"
