[workspace]
resolver = "2"
members  = ["bindings", "protocol", "server"]

[workspace.dependencies]
brec              = { path = "../../brec" }
serde             = "1.0"
thiserror         = "2.0"
tokio             = "1.50"
tokio-tungstenite = "0.29"
futures-util      = "0.3"
libc              = "0.2"
