[workspace]
resolver = "2"
members  = ["bindings", "protocol", "server"]

[workspace.dependencies]
brec              = { path = "../../lib/core", features = ["bincode", "napi"] }
serde             = "1.0"
serde_json        = "1.0"
thiserror         = "2.0"
tokio             = "1.50"
tokio-tungstenite = "0.29"
futures-util      = "0.3"
napi              = { version = "3.9", features = ["napi6"] }
napi-derive       = "3.5"
napi-build        = "2.3"
proptest          = { version = "1.10" }
