[workspace]
resolver = "2"
members  = ["binding", "protocol", "server"]

[workspace.dependencies]
brec              = { path = "../../brec" }
serde             = "1.0"
wasm-bindgen      = "0.2"
js-sys            = "0.3"
thiserror         = "2.0"
tokio             = "1.51"
tokio-tungstenite = "0.29"
futures-util      = "0.3"
