[workspace]
resolver = "2"
members  = ["bindings", "protocol", "server"]

[workspace.dependencies]
brec               = { path = "../../brec" }
serde              = "1.0"
serde_json         = "1.0"
wasm-bindgen       = "0.2"
serde-wasm-bindgen = "0.6"
thiserror          = "2.0"
tokio              = "1.50"
tokio-tungstenite  = "0.29"
futures-util       = "0.3"
