[package]
name        = "crypt"
version     = "0.1.0"
edition     = "2024"
authors     = ["d.astafyev@outlook.com"]
description = "This crate is intended for testing brec"
license     = "Apache-2.0"

[dependencies]
brec  = { path = "../../lib/core", features = ["bincode", "crypt"] }
serde = { version = "1.0", features = ["derive"] }
