[package]
name        = "ctx"
version     = "0.1.0"
edition     = "2024"
authors     = ["d.astafyev@outlook.com"]
description = "This crate is intended for testing brec"
license     = "Apache-2.0"

[dependencies]
brec  = { path = "../../brec" }
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
brec = { path = "../../brec", features = ["build"] }
