[package]
name = "wasmjs"
version = "0.1.0"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = "This crate is intended for testing brec"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
brec = { workspace = true, features=["bincode"]  }
serde = { workspace = true, features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
thiserror = "2.0"

[build-dependencies]
brec = { workspace = true, features=["build"] }
