[package]
name        = "brec_scheme"
version     = "0.1.0"
edition     = "2024"
authors     = ["d.astafyev@outlook.com"]
description = "Public schema types for Brec protocol generation"
license     = "Apache-2.0"
repository  = "https://github.com/icsmw/brec.git"
homepage    = "https://github.com/icsmw/brec"
readme      = "README.md"

keywords = ["binary", "packet", "schema", "codegen", "protocol"]

categories = [
    "encoding",
    "data-structures",
    "development-tools",
]

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace              = true
brec_macros_parser.workspace = true
