[package]
name        = "runner"
version     = "0.1.0"
edition     = "2024"
authors     = ["d.astafyev@outlook.com"]
description = "This crate is intended for testing brec"
license     = "Apache-2.0"

[dependencies]
brec  = { path = "../../lib/core", features = ["bincode", "crypt"] }
serde = "1.0"

[dev-dependencies]

serde_json  = "1.0.140"
proptest    = "1.4"
num-format  = "0.4"
sysinfo     = { version = "0.37", default-features = false, features = ["system"] }
prost       = "0.14"
flatbuffers = "25.9"

[workspace]
