[package]
name = "measurements"
version = "0.1.0"
edition = "2021"

[dependencies]
brec = { workspace = true, features=["bincode"]  }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
num-format.workspace = true

[build-dependencies]
brec = { workspace = true, features=["build"] }
