[package]
name        = "observer"
version     = "0.1.0"
edition     = "2024"
authors     = ["d.astafyev@outlook.com"]
description = "This crate is intended for testing brec"
license     = "Apache-2.0"

[dependencies]
brec  = { workspace = true, features = ["bincode", "observer"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
tokio              = { workspace = true, features = ["full"] }
tokio-util         = { workspace = true }
tokio-stream       = "0.1"

[build-dependencies]
brec = { workspace = true, features = ["build"] }
