[package]
name = "packet"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[features]
generate_macro_test = []

[dependencies]
thiserror.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
enum_ids.workspace = true
crc32fast.workspace = true
lazy_static.workspace = true
serde = { workspace = true , features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
quote.workspace = true
proc-macro2.workspace = true
uuid = { workspace = true , features = ["fast-rng", "macro-diagnostics", "v4"] }
