[package]
name        = "protocol"
version     = "0.1.0"
edition     = "2024"
authors     = ["d.astafyev@outlook.com"]
description = "This crate is intended for testing brec"
license     = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default    = []
test-utils = ["dep:proptest"]

[dependencies]
brec      = { workspace = true, features = ["bincode", "csharp"] }
serde     = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
proptest  = { version = "1.10", optional = true }

[dev-dependencies]
proptest = "1.10"
